# SVG_Generator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: advanced_usage.md
examples/: basic_example.py
requirements/: requirements-dev.txt  requirements.txt
src/svg_generator/: __init__.py
src/svg_generator/core/: __init__.py  generator.py  orchestrator.py
src/svg_generator/elements/: __init__.py  factory.py  gradients.py
src/svg_generator/elements/builders/: __init__.py
src/svg_generator/layout/: __init__.py  managers.py  patterns.py
src/svg_generator/rendering/: __init__.py  chord_map.py  grid3d.py
src/svg_generator/utils/: __init__.py  compliance.py  optimization.py
tests/unit/: test_elements.py
