[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "svg_generator"
version = "0.1.0"
description = "Advanced SVG generator for competitions"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "lxml>=4.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.3.0", "mypy>=1.6.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["svg_generator"]

[tool.black]
line-length = 120
target-version = ['py310']
